--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="level_select">Level Select</string>
     <string name="high_scores">High Scores</string>
     <string name="settings">Settings</string>
-    <string name="about_us">About us</string>
+    <string name="about_us">About</string>
     <string name="retry_level">Retry Level</string>
     <string name="skip_level">Skip Level</string>
     <string name="win_level">Win!</string>
